syntax = "proto3";

package temperature;

import "google/protobuf/timestamp.proto";

service ConditionsService {
  rpc SendConditions(ConditionsRequest) returns (Empty);
}

message Reading {
  google.protobuf.Timestamp timestamp = 1;
  string name = 2;
  oneof value {
    float float = 3;
    int64 integer = 4;
    string string = 5;
  }
}

message ConditionsRequest {
  repeated Reading readings = 1;
}

message Empty {}